<resources>
    <string name="app_name">丰乐农化_测试版本</string>
    <string name="tencent_bugly_id">b9c3f570f4</string>
    <string name="tip_service_exception">连接服务器异常!</string>
    <string name="tip_network_unconnect">网络断开,请检查网络!</string>
    <string name="tip_socket_timeout">网络连接超时!</string>
    <string name="tip_unknown_error">发生未知错误(%1$s)!</string>
    <string name="tip_request_failed">请求数据失败!</string>
    <string name="hint_loginname">手机号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="tip_forget_pwd">忘记密码</string>
    <string name="tip_register">还没有账号？去注册一个</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="warming_doubleclick_logout">再次点击退出程序</string>
    <string name="module_stock_query">库存查询</string>
    <string name="module_promotion_request">促销申请</string>
    <string name="module_delivery_request">发货申请</string>
    <string name="module_add_delivery_request">添加发货申请</string>
    <string name="module_add_promotion_request">添加促销申请</string>
    <string name="module_delivery_add">发货添加</string>
    <string name="module_delivery_detail">发货申请详情</string>
    <string name="module_promotion_detail">促销申请详情</string>
    <string name="module_transfer_request">调货申请</string>
    <string name="module_transfer_detail">调货申请详情</string>
    <string name="module_add_transfer_request">添加调货申请</string>
    <string name="module_return_request">退货申请</string>
    <string name="module_add_return_request">添加退货申请</string>
    <string name="module_return_detail">退货申请详情</string>
    <string name="module_billing">开票</string>
    <string name="module_add_billing_request">添加开票申请</string>
    <string name="module_billing_detail">开票申请详情</string>
    <string name="module_payment_declaration">回款申报</string>
    <string name="module_payment_query">回款查询</string>
    <string name="module_plan_adjustment_request">计划调剂</string>
    <string name="module_add_plan_adjustment">添加计划调剂</string>
    <string name="module_plan_adjustment_detail">计划调剂详情</string>
    <string name="module_contacts_query">往来申请</string>
    <string name="module_customer_analysis">客户分析</string>
    <string name="module_visiting_plan">拜访计划</string>
    <string name="module_customers_situation">客户维情</string>
    <string name="module_my_customers">我的客户</string>
    <string name="module_move_attendance">移动考勤</string>
    <string name="module_daily">日报</string>
    <string name="module_activities_manager">活动管理</string>
    <string name="module_achievement_manager">业绩管理</string>
    <string name="module_person">个人中心</string>
    <string name="module_my_message">我的消息</string>
    <string name="module_customer_query">客户查询</string>
    <string name="module_promotion_customer_query">促销客户查询</string>
    <string name="module_sales_detail">销售明细</string>
    <string name="module_goods_sale_detail">单一货物销售明细</string>
    <string name="module_customer_contact">客户往来</string>
    <string name="module_add_payment_declaration">添加回款申报</string>
    <string name="module_payment_declaration_details">回款申报详情</string>
    <string name="module_goods_query">货物查询</string>
    <string name="module_promotion_goods_query">促销货物查询</string>
    <string name="module_area_query">大区查询</string>
    <string name="module_warehouse_query">仓库查询</string>
    <string name="module_payment_type">回款类型查询</string>
    <string name="module_bank_code">收款银行查询</string>
    <string name="module_fukuan_type">付款类型查询</string>
    <string name="module_status_detail">状态详情</string>
    <string name="module_under_query">直属下级</string>
    <string name="area_select">选择大区</string>
    <string name="stock_select">选择仓库</string>
    <string name="stock_name_hint">货物名,编号</string>
    <string name="query">查询</string>
    <string name="bill_undeal">待处理</string>
    <string name="bill_undone">未完成</string>
    <string name="bill_history">历史单据</string>
    <string name="select_customer">选择客户</string>
    <string name="select_goods">选择货物</string>
    <string name="hint_remarks">输入备注</string>
    <string name="hint_uname">客户名称</string>
    <string name="select_warehouse">选择仓库</string>
    <string name="fukui_type">付款类型</string>
    <string name="payment_type">回款类型</string>
    <string name="bank_code">收款银行</string>
    <string name="out_customer">调出客户</string>
    <string name="in_customer">调入客户</string>
    <string name="out_customer_tag">调出客户:</string>
    <string name="in_customer_tag">调入客户:</string>
    <string name="out_area_tag">调出大区:</string>
    <string name="in_area_tag">调入大区:</string>
    <string name="selected_goods">已选货物如下:</string>
    <string name="warimg_unselect_customer">请选择客户</string>
    <string name="warimg_unselect_in_or_out_customer">请选择调出调入客户</string>
    <string name="warimg_unselect_in_or_out_area">请选择调出调入大区</string>
    <string name="warimg_selected_goods_clear">客户一旦更改，所选货物即将被清空</string>
    <string name="warimg_selected_stock">仓库一旦更改，所选货物即将被清空</string>
    <string name="warimg_unselect_area">请选择调出大区</string>
    <string name="warimg_area_selected_goods_clear">大区一旦更改，所选货物即将被清空</string>
    <string name="warimg_customer_no_same">调出客户不能与调入客户相同</string>
    <string name="warimg_area_no_same">调出大区不能与调入大区相同</string>
    <string name="warimg_unselect_goods">请选择货物</string>
    <string name="hint_customer">客户名称</string>
    <string-array name="header_title_stock">
        <item>名称</item>
        <item>规格</item>
        <item>计划</item>
        <item>库存</item>
        <item>单位</item>
        <item>价格</item>
    </string-array>
    <string-array name="header_title_activity">
        <item>大区</item>
        <item>客户名称</item>
        <item>用费预算</item>
        <item>状态</item>
        <item>操作</item>
    </string-array>
    <string-array name="header_title_goods_query">
        <item>编号</item>
        <item>名称</item>
        <item>规格</item>
        <item>单位</item>
        <item>库存</item>
        <item>价格</item>
    </string-array>
    <string-array name="header_title_goods_query_promotion">
        <item>编号</item>
        <item>名称</item>
        <item>规格</item>
        <item>库存</item>
    </string-array>
    <string-array name="header_title_goods_query_delivery">
        <item>编号</item>
        <item>名称</item>
        <item>规格</item>
        <item>单位</item>
        <item>库存</item>
        <item>计划</item>
        <item>价格</item>
    </string-array>
    <string-array name="header_title_customer">
        <item>编号</item>
        <item>名称</item>
    </string-array>
    <string-array name="header_title_customer_analysis">
        <item>序号</item>
        <item>客户名称</item>
        <item>发货金额</item>
        <item>上年发货</item>
        <item>增长率</item>
    </string-array>
    <string name="customer_keyword_hint">客户名或编号</string>
    <string name="goods_keyword_hint">货物名或编号</string>
    <string-array name="header_title_delivey_request">
        <item>时间</item>
        <item>客户</item>
        <item>状态</item>
        <item>操作</item>
    </string-array>
    <string-array name="header_title_bill_request">
        <item>时间</item>
        <item>客户</item>
        <item>状态</item>
        <item>操作</item>
    </string-array>
    <string-array name="header_title_promotion_request">
        <item>时间</item>
        <item>促销客户</item>
        <item>状态</item>
        <item>操作</item>
    </string-array>
    <string-array name="header_title_plan_request">
        <item>时间</item>
        <item>调出大区</item>
        <item>调入大区</item>
        <item>状态</item>
        <item>操作</item>
    </string-array>
    <string-array name="header_title_add_plan_request">
        <item>名称</item>
        <item>规格</item>
        <item>剩余计划</item>
        <item>调剂数量</item>
        <item>操作</item>
    </string-array>
    <string-array name="header_title_add_delivey_request">
        <item>名称</item>
        <item>规格</item>
        <item>数量</item>
        <item>件数</item>
        <item>操作</item>
    </string-array>
    <string-array name="header_title_add_transfer_request">
        <item>名称</item>
        <item>规格</item>
        <item>数量</item>
        <item>件数</item>
        <item>运费</item>
        <item>操作</item>
    </string-array>
    <string-array name="header_title_payment_request">
        <item>编号</item>
        <item>名称</item>
        <item>操作</item>
    </string-array>
    <string-array name="header_title_sales_detail">
        <item>客户名称</item>
        <item>货物编号</item>
        <item>货物名称</item>
        <item>详情</item>
    </string-array>
    <string-array name="header_title_regional">
        <item>大区</item>
        <item>业绩目标</item>
        <item>发贷金额</item>
        <item>回款金额</item>
        <item>业绩排名</item>
        <item>完成率</item>
    </string-array>
    <string-array name="header_title_sale">
        <item>业务员</item>
        <item>业绩目标</item>
        <item>发贷金额</item>
        <item>回款金额</item>
        <item>业绩排名</item>
        <item>完成率</item>
    </string-array>
    <string-array name="header_title_transfer_request">
        <item>时间</item>
        <item>调出客户</item>
        <item>状态</item>
        <item>操作</item>
    </string-array>
    <string-array name="header_title_payment_declaration">
        <item>回款日期</item>
        <item>客户名称</item>
        <item>金额</item>
        <item>操作</item>
    </string-array>
    <string-array name="header_title_saler">
        <item>业务员</item>
        <item>业绩目标</item>
        <item>发贷金额</item>
        <item>回款金额</item>
        <item>业绩排名</item>
        <item>完成率</item>
    </string-array>
    <string name="operater">操作</string>
    <string-array name="oprater_add">
        <item>提交</item>
        <item>暂存</item>
        <item>取消</item>
    </string-array>
    <string-array name="oprater_bohui">
        <item>提交</item>
        <item>删除</item>
        <item>取消</item>
    </string-array>
    <string-array name="oprater_tempary">
        <item>提交</item>
        <item>删除</item>
        <item>取消</item>
    </string-array>
    <string-array name="oprater_return">
        <item>撤回</item>
        <item>删除</item>
        <item>取消</item>
    </string-array>
    <string-array name="plan_adjustment_add">
        <item>提交</item>
        <item>暂存</item>
        <item>取消</item>
    </string-array>
    <string-array name="oprater_audit">
        <item>审核通过</item>
        <item>驳回</item>
        <item>取消</item>
    </string-array>
    <string-array name="oprater_take_photo">
        <item>拍照</item>
        <item>从手机相册选择</item>
        <item>取消</item>
    </string-array>
    <string-array name="header_title_summary">
        <item>日期</item>
        <item>计划</item>
        <item>操作</item>
    </string-array>
    <string name="commit">提交</string>
    <string name="temporary">暂存</string>
    <string name="drop">删除</string>
    <string name="reject">驳回</string>
    <string name="audit_through">审核通过</string>
    <string name="cancel">取消</string>
    <string name="take_photo">拍照</string>
    <string name="pick_photo_from_phone">从手机相册选择</string>
    <string name="customer_name">客户名称</string>
    <string name="customer_code">客户编码</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="in_area">调入大区</string>
    <string name="out_area">调出大区</string>
    <string name="basic_info">基本信息</string>
    <string name="tag_customer_name">客户名称：</string>
    <string name="tag_current_delivery">本年发货：</string>
    <string name="tag_current_payment">本年回款：</string>
    <string name="tag_trust_rate">信任比率：</string>
    <string name="tag_real_rate">实际比率：</string>
    <string name="tag_stock_name">存货名称：</string>
    <string name="tag_begin_count">期初数量：</string>
    <string name="tag_deliver_tonnage">发货吨位：</string>
    <string name="tag_transfer_tonnage">调货吨位：</string>
    <string name="tag_return_tonnage">退货吨位：</string>
    <string name="tag_consignment_value">代销市值：</string>
    <string name="confirm">确认</string>
    <string name="no_data">暂无数据</string>
</resources>