<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <include
        layout="@layout/layout_radiobuttom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />

    <include layout="@layout/layout_time_select" />

    <EditText
        android:id="@+id/edit_keyword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_view_height"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/common_left_margin"
        android:layout_marginRight="@dimen/common_right_margin"
        android:layout_marginTop="@dimen/common_top_margin"
        android:background="@drawable/input_bg2"
        android:focusable="true"
        android:gravity="center_vertical"
        android:hint="@string/hint_customer"
        android:maxLines="1"
        android:paddingLeft="15dp"
        android:textColor="@color/text_color2"
        android:textColorHint="@color/hint_color1"
        android:textSize="@dimen/comom_txt_size_m" />

    <Button
        android:id="@+id/btn_query"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/common_left_margin"
        android:layout_marginRight="@dimen/common_right_margin"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_style2"
        android:focusable="true"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/comom_txt_size_m" />

    <TextView
        android:id="@+id/txt_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_left_margin"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_color2"
        android:textSize="@dimen/comom_txt_size_xs" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/diver_coloer" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </android.support.v4.widget.SwipeRefreshLayout>
    <TextView
        android:id="@+id/txt_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data"
        android:textColor="@color/text_color1" />
</LinearLayout>


