<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:table="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color2"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_view_height"
        android:layout_marginLeft="@dimen/common_left_margin"
        android:layout_marginRight="@dimen/common_right_margin"
        android:layout_marginTop="@dimen/common_top_margin"
        android:orientation="horizontal"
        android:background="@drawable/input_bg2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/out_area_tag"
            android:textColor="@color/text_color2"
            android:textSize="@dimen/comom_txt_size_m" />
        <TextView
            android:id="@+id/txt_out_area"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:maxLines="2"
            android:textColor="@color/text_color2"
            android:textSize="@dimen/comom_txt_size_m" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_view_height"
        android:layout_marginLeft="@dimen/common_left_margin"
        android:layout_marginRight="@dimen/common_right_margin"
        android:layout_marginTop="@dimen/common_top_margin"
        android:orientation="horizontal"
        android:background="@drawable/input_bg2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/in_area_tag"
            android:textColor="@color/text_color2"
            android:textSize="@dimen/comom_txt_size_m" />
        <TextView
            android:id="@+id/txt_in_area"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="5dp"
            android:maxLines="2"
            android:textColor="@color/text_color2"
            android:textSize="@dimen/comom_txt_size_m" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_view_height"
        android:layout_marginLeft="@dimen/common_left_margin"
        android:layout_marginRight="@dimen/common_right_margin"
        android:layout_marginTop="@dimen/common_top_margin"
        android:orientation="horizontal"
        android:background="@drawable/input_bg2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_view_height"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/selected_goods"
            android:textColor="@color/text_color2"
            android:textSize="@dimen/comom_txt_size_m"
            android:id="@+id/textView3" />

        <Button
            android:id="@+id/btn_select_goods"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_view_height"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:text="@string/select_goods"
            android:visibility="gone"
            android:textColor="@color/text_color2"
            android:textSize="@dimen/comom_txt_size_m" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.codecrafters.tableview.TableView xmlns:table="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tableView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/llayout_status"
            android:layout_marginTop="18dp"
            android:scrollbars="none"
            table:tableView_columnCount="5"
            table:tableView_headerColor="@color/table_head_color"
            table:tableView_headerElevation="25" />
        <include
            android:id="@+id/llayout_status"
            layout="@layout/view_bill_status" />

    </RelativeLayout>


</LinearLayout>


